--- a/django_learing/templates/book/index_form.html
+++ b/django_learing/templates/book/index_form.html
@@ -15,8 +15,9 @@
 </head>
 	<body>
 		<h1>表单提交</h1>
+        <h1>{{ msg }}</h1>
 		<div class="col-md-6">
-			<form method="post">
+			<form method="get">
 				<div class="form-group">
 					<label for="exampleInputEmail1">Email address</label>
 					<input name="email" type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
