--- a/django_learing/forms_base/templates/forms_base/index.html
+++ b/django_learing/forms_base/templates/forms_base/index.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h1>欢迎您~ {{ request.session.user }}</h1>
+<h1>欢迎您~ {{ request.user }}</h1>
+<h1>原始表单</h1>
 <form action="/your-name/" method="post">
 	<p><label for="id_subject">Subject:</label>
 	    <input id="id_subject" type="text" name="subject" maxlength="100" required /></p>
@@ -15,7 +18,19 @@
 	<p><label for="id_cc_myself">Cc myself:</label>
 	    <input type="checkbox" name="cc_myself" id="id_cc_myself" /></p>
 </form>
-
+<h1>Django-Form表单-as_table</h1>
+<form>
+    {{ form.as_p }}
+    <button type="submit">提交</button>
+</form>
+<h1>Django-Form表单-as_p</h1>
+{#{{ form.as_table }}#}
+<h1>Django-Form表单-as_ul</h1>
+{#{{ form.as_ul }}#}
+<h1>Django-Form表单-单个元素</h1>
+{{ form.subject.label }}:{{ form.subject }}:{{ form.subject.errors.0 }}:{{ form.subject.errors }}
+</body>
+</html>
 <h1>Djanog-Form表单</h1>
 <form action="/your-name/" method="post">
     {{ form.as_table }}
